--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "sstream": "cpp",
         "streambuf": "cpp",
         "iosfwd": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "iostream": "cpp"
     }
 }
