--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "(gdb) Launch",
-            "type": "cppdbg",
+            "type": "gdb",
             "request": "launch",
             "program": "${workspaceFolder}/main",
             "args": [],
